// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetContactAttribComp render helpers getAttribNameMarkup should return emphasized field name 1`] = `
<span
  className="emph"
>
  Age
</span>
`;

exports[`SetContactAttribComp render helpers getAttribNameMarkup should return emphasized property 1`] = `
<span
  className="emph"
>
  Name
</span>
`;

exports[`SetContactAttribComp render should render with 'clear...' div when value prop isn't passed 1`] = `
<React.Fragment>
  Clear value for 
  <span
    className="emph"
  >
    Name
  </span>
</React.Fragment>
`;

exports[`SetContactAttribComp render should render with 'update...' div when value prop passed 1`] = `
<React.Fragment>
  Update 
  <span
    className="emph"
  >
    Name
  </span>
   to 
  <span
    className="emph"
  >
    Jane Goodall
  </span>
</React.Fragment>
`;
